Nav and Logo Set to fixed with z-index of 1

--- a/css/style.css
+++ b/css/style.css
@@ -35,20 +35,20 @@ img {
 }
 
 .logo {
-  left: 50px;
+  left: 59px;
   margin: 0;
   padding: 0;
-  position: absolute;
+  position: fixed;
   top: 50px;
   width: 22px;
   z-index: 1;
 }
 
 .logo-portfolio {
-  left: 50px;
+  left: 59px;
   margin: 0;
   padding: 0;
-  position: absolute;
+  position: fixed;
   top: 50px;
   width: 32px;
   z-index: 1;
@@ -204,10 +204,32 @@ Portfolio Works
   padding: 0;
 }
 
+.project a, .project-2 a, .project-3 a, .project-4 a, .project-5 a, .project-6 a {
+  color: #111;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.4em;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  top: 25px;
+}
+
+.project a:hover, .project-2 a:hover, .project-3 a:hover, .project-4 a:hover, .project-5 a:hover, .project-6 a:hover {
+  color: #888;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.4em;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  top: 25px;
+}
+
 .project-image {
   display: inline-block;
   position: relative;
-  top: 143px;
+  top: 102px;
   width: 65%;
 }
 
@@ -215,7 +237,7 @@ Portfolio Works
   display: inline-block;
   margin-left: 50px;
   position: relative;
-  top: 143px;
+  top: 102px;
   width: 65%;
 }
 
@@ -223,7 +245,7 @@ Portfolio Works
   display: inline-block;
   margin-left: 50px;
   position: relative;
-  top: 143px;
+  top: 102px;
   width: 65%;
 }
 
@@ -236,19 +258,21 @@ Navigation
 .navigation {
   background-color: #fff;
   display: inline-block;
-  left: 500px;
+  left: 414px;
   padding: 5px;
-  position: absolute;
+  position: fixed;
   top: 47px;
+  z-index: 1;
 }
 
 .navigation-portfolio {
   background-color: #fff;
   display: inline-block;
-  left: 500px;
+  left: 414px;
   padding: 5px;
-  position: absolute;
+  position: fixed;
   top: 50px;
+  z-index: 1;
 }
 
   ul {list-style: none;padding: 0px; margin: 0px; text-transform: uppercase;}
